--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                                     <div class="project-image-container" data-aos="fade-right">
                                         <div class="overlay"></div>
                                         <div class="project-image uk-position-relative">
-                                            <img src="./images/financial-calculators.co.uk" >
+                                            <img src="./images/financial-calculators.co.uk.png" >
                                         </div>
                                     </div>
                                 </a>
