--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                                         Since beginning my journey as a Web Developer, I have greatly expanded my knowledge and improved efficiency, in both languages used and in the many tools I have added to my toolbelt.
                                     </p>
                                     <p class="uk-margin-remove">
-                                        My main area of expertise is in front-end development. I have a real passion for building pixel-perfect websites and apps that are intuitive, semantic and responsive.
+                                        I have a diverse set of skills, ranging from HTML, CSS and Javascript, all the way to PHP, SQLite and Firebase. Although my main area of expertise is in front-end development. I have a real passion for building pixel-perfect websites and apps that are intuitive, semantic and responsive.
                                     </p>
                                 </div>
                                 <div style="margin-top: -10px;">
@@ -314,7 +314,7 @@
                                     <div class="uk-margin">
                                         PHP
                                         <div class="skills-bar">
-                                            <div class="skill-level" data-skill-level="50%"></div>
+                                            <div class="skill-level" data-skill-level="60%"></div>
                                         </div>
                                     </div>
                                     <div class="uk-margin">
