--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                                     <h3 class="project-title">Norfolk Knights</h3>
                                     <div class="project-description">
                                         <p>
-                                            A website for <a class="link link--anim" href="https://www.charwinprivateclients.co.uk/" target="blank" rel="noopener noreferrer"><span>Norfolk Knights</span></a> the local wheelchair rugby team.  
+                                            A website for <a class="link link--anim" href="https://www.norfolk-knights-wheelchair-rugby.co.uk/" target="blank" rel="noopener noreferrer"><span>Norfolk Knights</span></a> the local wheelchair rugby team.  
                                             Zoho Creator was used to create a simple management interface for the client. The information is then converted into Markdown files with YAML headers. The files are then fed into GRAV CMS to modify, remove or even build completley new sections or pages. This allows the client to manage and change their website on the fly.
                                         </p>
                                     </div>
@@ -537,6 +537,7 @@
                                             After stuggling to find a website with financial calculators that dynamically update without having to enter your desired values and then click a button to see the results. I decided to create my own. All the values dynamically update as the sliders are dragged, enter is pressed or the user clicks away from the inputs. The aim is build a vast array of calculators and tools, along with key finanical imformation.
                                     </div>
                                     <ul class="project-tech-stack">
+                                        <li>HTML</li>
                                         <li>CSS</li>
                                         <li>JS</li>
                                         <li>UiKit</li>
