Scroll bar changes. Track still not working as it was.

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
                                         <li>UiKit</li>
                                     </ul>
                                     <div class="project-links">
-                                        <a class="icon-link" uk-tooltip="title: GitHub; pos: left; delay: 700" href="https://github.com/TomNikoloff" target="blank" rel="noopener noreferrer"><i class="fa-brands fa-github fa-xl"></i></a>
+                                        <a class="icon-link" uk-tooltip="title: GitHub; pos: left; delay: 700" href="https://github.com/TomNikoloff/financial-calculators" target="blank" rel="noopener noreferrer"><i class="fa-brands fa-github fa-xl"></i></a>
                                         <a class="icon-link" uk-tooltip="title: External Link; pos: bottom; delay: 700" href="https://financial-calculators.co.uk/" target="blank" rel="noopener noreferrer"><i  class="fa-solid fa-arrow-up-right-from-square fa-lg"></i></i></a>
                                     </div>
                                 </div>
