--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="uk-flex uk-flex-middl">
+                            <div class="uk-flex uk-flex-middle">
                                 <div class="project-content" data-aos="zoom-out-left">
                                     <div>
                                         <p class="project-type">
