Project <hr> dividers

--- a/index.html
+++ b/index.html
@@ -475,6 +475,8 @@
                                 </div>
                             </div>
                         </div>
+
+                        <hr class="uk-divider-icon uk-hidden@l">
             
                         <!-- Second Project-->
                         <div uk-grid class="uk-grid uk-child-width-1-2@l uk-grid-column-collapse project-container uk-margin-xlarge-top">
@@ -513,6 +515,8 @@
                                 </a>
                             </div>
                         </div>
+
+                        <hr class="uk-divider-icon uk-hidden@l">
             
                         <!-- Third Project-->
                         <div uk-grid class="uk-grid uk-child-width-1-2@l uk-grid-column-collapse project-container uk-margin-xlarge-top">
