--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                                         <li>Firebase</li>
                                     </ul>
                                     <div class="project-links">
-                                        <a class="btn" href="#" target="blank" rel="noopener noreferrer">Learn More</a>
+                                        <a class="btn">Learn More</a>
                                     </div>
                                 </div>
                             </div>
