Temp animation for expanded kata section

--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
 
                             <!-- Kata Flow Expanded - START -->
 
-                        <div uk-grid class="uk-grid uk-child-width-1-2@l uk-grid-column-collapse project-container kata-expanded hide">
+                        <div uk-grid class="uk-grid uk-child-width-1-2@l uk-grid-column-collapse project-container kata-expanded uk-animation-slide-top hide">
                             <div class="uk-flex uk-flex-middle uk-flex-first@l uk-flex-last">
                                 <div class="project-content" data-aos="zoom-out-right">
                                     <div class="project-description">
@@ -500,7 +500,7 @@
                             </div>
                         </div>
 
-                        <div uk-grid class="uk-grid uk-child-width-1-2@l uk-grid-column-collapse project-container uk-margin-medium-bottom kata-expanded hide">
+                        <div uk-grid class="uk-grid uk-child-width-1-2@l uk-grid-column-collapse project-container uk-margin-medium-bottom kata-expanded uk-animation-slide-top hide">
                             <div class="uk-position-relative">
                                 <a>
                                     <div class="project-image-container" data-aos="fade-right">
