Project links margin fix. Project expand btn changes

--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                                         <li>Firebase</li>
                                     </ul>
                                     <div class="project-links">
-                                        <button id="kata_flow_expand" type="button" class="btn" data-state="hidden">Learn More</button>
+                                        <button id="kata_flow_expand" type="button" class="btn" data-state="hidden">Learn More <span uk-icon="arrow-down"></span></button>
                                     </div>
                                 </div>
                             </div>
