Temporary 'More To Come' header for projects

--- a/index.html
+++ b/index.html
@@ -471,6 +471,9 @@
                                     </ul>
                                     <div class="project-links">
                                         <button id="kata_flow_expand" type="button" class="btn" data-state="hidden">Learn More <span uk-icon="arrow-down"></span></button>
+                                        <!--
+                                        <button href=".kata-expanded " id="kata_flow_expand" type="button" class="btn" data-state="hidden" uk-toggle="target: .kata-expanded; animation: uk-animation-slide-top-medium">Learn More <span uk-icon="arrow-down"></span></button>
+                                        -->
                                     </div>
                                 </div>
                             </div>
@@ -525,7 +528,7 @@
                                 </div>
                             </div>
                         </div>
-<!--
+                        <!--
                         <hr class="uk-divider-icon uk-hidden@l">
 
                         <div uk-grid class="uk-grid uk-child-width-1-2@l uk-grid-column-collapse project-container">
@@ -549,7 +552,7 @@
                                 </a>
                             </div>
                         </div>
--->
+                        -->
                             <!-- Kata Flow Expanded - END -->
 
                         <hr class="uk-divider-icon uk-hidden@l">
@@ -632,7 +635,11 @@
                         
             
                     </div>
+                    <div class="uk-margin-large-top">
+                        <h3 class="more-to-come">More To Come...</h3>
+                    </div>
                 </div>
+
                 <div class="uk-position-absolute" style="bottom: 50px;">
                     <div>
                         <span class="html-tags uk-visible@s">
