--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tom Nikoloff</title>
+    <meta name="description" content="Thomas Nikoloff is design minded web developer who is focused on building beautiful interfaces and experiences.">
 
+    <!-- Favicon -->
     <link rel="icon" href="./images/favicon.png" type="image/x-icon" />
 
     <!-- Font Awesome -->
