--- a/index.html
+++ b/index.html
@@ -331,6 +331,40 @@
                                             <div class="skill-level" data-skill-level="92%"></div>
                                         </div>
                                     </div>
+                                    
+                                    <!--
+                                    <div class="uk-margin">
+                                        &lt;HTML5/&gt;
+                                        <div class="skills-bar">
+                                            <div id="js_skill" class="skill-level" data-skill-level="95%"></div>
+                                        </div>
+                                    </div>
+                                    <div class="uk-margin">
+                                        Javascript();
+                                        <div class="skills-bar">
+                                            <div id="js_skill" class="skill-level" data-skill-level="92%"></div>
+                                        </div>
+                                    </div>
+                                    <div class="uk-margin">
+                                        <div uk-spinner="ratio: 3;"></div>
+                                        &lt;?PHP ?&gt;
+                                        <div class="skills-bar">
+                                            <div class="skill-level" data-skill-level="60%"></div>
+                                        </div>
+                                    </div>
+                                    <div class="uk-margin">
+                                        React();
+                                        <div class="skills-bar">
+                                            <div class="skill-level" data-skill-level="30%"></div>
+                                        </div>
+                                    </div>
+                                    <div class="uk-margin">
+                                        .CSS3{}
+                                        <div class="skills-bar">
+                                            <div class="skill-level" data-skill-level="92%"></div>
+                                        </div>
+                                    </div>
+                                    -->
                                 </div>
                             </div>
                             <div class="experience-section">
