Skills Area Updates

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                                     <div class="uk-margin">
                                         PHP
                                         <div class="skills-bar">
-                                            <div class="skill-level" data-skill-level="60%"></div>
+                                            <div class="skill-level" data-skill-level="70%"></div>
                                         </div>
                                     </div>
                                     <div class="uk-margin">
@@ -331,37 +331,32 @@
                                             <div class="skill-level" data-skill-level="92%"></div>
                                         </div>
                                     </div>
-                                    
                                     <!--
-                                    <div class="uk-margin">
-                                        &lt;HTML5/&gt;
-                                        <div class="skills-bar">
-                                            <div id="js_skill" class="skill-level" data-skill-level="95%"></div>
+                                    <div class="uk-flex">
+                                        <div class="uk-position-relative">
+                                            <div class="ring">&lt;HTML5/&gt;
+                                                <span></span>
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="uk-margin">
-                                        Javascript();
-                                        <div class="skills-bar">
-                                            <div id="js_skill" class="skill-level" data-skill-level="92%"></div>
+                                        <div class="uk-position-relative">
+                                            <div class="ring">JS();
+                                                <span></span>
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="uk-margin">
-                                        <div uk-spinner="ratio: 3;"></div>
-                                        &lt;?PHP ?&gt;
-                                        <div class="skills-bar">
-                                            <div class="skill-level" data-skill-level="60%"></div>
+                                        <div class="uk-position-relative">
+                                            <div class="ring">&lt;?PHP ?&gt;
+                                                <span></span>
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="uk-margin">
-                                        React();
-                                        <div class="skills-bar">
-                                            <div class="skill-level" data-skill-level="30%"></div>
+                                        <div class="uk-position-relative">
+                                            <div class="ring">React();
+                                                <span></span>
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="uk-margin">
-                                        .CSS3{}
-                                        <div class="skills-bar">
-                                            <div class="skill-level" data-skill-level="92%"></div>
+                                        <div class="uk-position-relative">
+                                            <div class="ring">.CSS3{}
+                                                <span></span>
+                                            </div>
                                         </div>
                                     </div>
                                     -->
