Further Skills Area Changes

--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@
                         <div>
                             <div class="skills-section">
                                 <div id="skill_animation_trigger">
+
                                     <div class="uk-margin">
                                         HTML5
                                         <div class="skills-bar">
@@ -316,7 +317,7 @@
                                     <div class="uk-margin">
                                         PHP
                                         <div class="skills-bar">
-                                            <div class="skill-level" data-skill-level="70%"></div>
+                                            <div class="skill-level" data-skill-level="75%"></div>
                                         </div>
                                     </div>
                                     <div class="uk-margin">
@@ -331,8 +332,9 @@
                                             <div class="skill-level" data-skill-level="92%"></div>
                                         </div>
                                     </div>
+
                                     <!--
-                                    <div class="uk-flex">
+                                    <div class="uk-flex uk-flex-center" style="margin-top: 50px; margin-left: 120px;">
                                         <div class="uk-position-relative">
                                             <div class="ring">&lt;HTML5/&gt;
                                                 <span></span>
@@ -343,6 +345,8 @@
                                                 <span></span>
                                             </div>
                                         </div>
+                                    </div>
+                                    <div class="uk-flex uk-flex-center" style="margin-bottom: -50px; margin-left: 120px;">
                                         <div class="uk-position-relative">
                                             <div class="ring">&lt;?PHP ?&gt;
                                                 <span></span>
