--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                                         Since beginning my journey as a Web Developer, I have greatly expanded my knowledge and improved efficiency, in both languages used and in the many tools I have added to my tool belt.
                                     </p>
                                     <p class="uk-margin-remove">
-                                        I have a diverse set of skills, ranging from HTML, CSS and Javascript, all the way to PHP, SQLite and Firebase. Although my main area of expertise is in front-end development. I have a real passion for building pixel-perfect websites and apps that are intuitive, semantic and responsive.
+                                        I have a diverse set of skills, ranging from HTML, CSS and JavaScript, all the way to PHP, SQLite and Firebase. Although my main area of expertise is in front-end development. I have a real passion for building pixel-perfect websites and apps that are intuitive, semantic and responsive.
                                     </p>
                                 </div>
                                 <div style="margin-top: -10px;">
@@ -309,7 +309,7 @@
                                         </div>
                                     </div>
                                     <div class="uk-margin">
-                                        Javascript
+                                        JavaScript
                                         <div class="skills-bar">
                                             <div id="js_skill" class="skill-level" data-skill-level="92%"></div>
                                         </div>
@@ -555,7 +555,7 @@
                                 <div class="project-content" data-aos="zoom-out-left">
                                     <div class="project-description">
                                         <p>
-                                            The builder also offers the ability to add domains, analytics, CSS, Javascript and much more.
+                                            The builder also offers the ability to add domains, analytics, CSS, JavaScript and much more.
                                             Frequently used cards can be saved to the custom palette. The saved cards can then be reordered, modified or removed.
                                             A preview of the form can be viewed at any point. This is useful for testing or going through the form in the eyes of the end user.
                                         </p>
