--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
                         </div>
                     </div>
         
-                    <div>
+                    <div classs="projects-area">
                 
                         <!-- First Project-->
                         <div uk-grid class="uk-grid uk-child-width-1-2@l uk-grid-column-collapse project-container">
