--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <script src="https://kit.fontawesome.com/2eaf1545d9.js" crossorigin="anonymous"></script>
 
     <!-- UIkit CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.15.24/dist/css/uikit.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.16.23/dist/css/uikit.min.css" />
 
     <!-- UIkit JS -->
-    <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.24/dist/js/uikit.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.24/dist/js/uikit-icons.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.23/dist/js/uikit.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.23/dist/js/uikit-icons.min.js"></script>
 
     <!-- CSS  -->
     <link rel="stylesheet" href="./library/css/core.css">
@@ -608,7 +608,7 @@
                                     <h3 class="project-title">Norfolk Knights</h3>
                                     <div class="project-description">
                                         <p>
-                                            A website for <a class="link link--anim" href="https://www.norfolk-knights-wheelchair-rugby.co.uk/" target="blank" rel="noopener noreferrer"><span>Norfolk Knights</span></a> the local wheelchair rugby team.  
+                                            A website for <a class="link link--anim" href="https://www.norfolk-knights-wheelchair-rugby.co.uk/" target="_blank" rel="noopener noreferrer"><span>Norfolk Knights</span></a> the local wheelchair rugby team.  
                                             Zoho Creator was used to create a simple management interface for the client. The information is then converted into Markdown files with YAML headers. The files are then fed into GRAV CMS to modify, remove or even build completley new sections or pages. This allows the client to manage and change their website on the fly.
                                         </p>
                                     </div>
@@ -620,12 +620,12 @@
                                         <li>UiKit</li>
                                     </ul>
                                     <div class="project-links">
-                                        <a class="icon-link" uk-tooltip="title: External Link; pos: right; delay: 700" href="https://www.norfolk-knights-wheelchair-rugby.co.uk/" target="blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square fa-lg"></i></a>
+                                        <a class="icon-link" uk-tooltip="title: External Link; pos: right; delay: 700" href="https://www.norfolk-knights-wheelchair-rugby.co.uk/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square fa-lg"></i></a>
                                     </div>
                                 </div>
                             </div>
                             <div class="uk-position-relative">
-                                <a  href="https://www.norfolk-knights-wheelchair-rugby.co.uk/" target="blank" rel="noopener noreferrer">
+                                <a  href="https://www.norfolk-knights-wheelchair-rugby.co.uk/" target="_blank" rel="noopener noreferrer">
                                     <div class="project-image-container" data-aos="fade-left">
                                         <div class="overlay"></div>
                                         <div class="project-image">
@@ -641,7 +641,7 @@
                         <!-- Third Project-->
                         <div uk-grid class="uk-grid uk-child-width-1-2@l uk-grid-column-collapse project-container uk-margin-xlarge-top">
                             <div class="uk-position-relative">
-                                <a  href="https://financial-calculators.co.uk/" target="blank" rel="noopener noreferrer">
+                                <a  href="https://financial-calculators.co.uk/" target="_blank" rel="noopener noreferrer">
                                     <div class="project-image-container" data-aos="fade-right">
                                         <div class="overlay"></div>
                                         <div class="project-image uk-position-relative">
@@ -667,14 +667,168 @@
                                         <li>UiKit</li>
                                     </ul>
                                     <div class="project-links">
-                                        <a class="icon-link" uk-tooltip="title: GitHub; pos: left; delay: 700" href="https://github.com/TomNikoloff/financial-calculators" target="blank" rel="noopener noreferrer"><i class="fa-brands fa-github fa-xl"></i></a>
-                                        <a class="icon-link" uk-tooltip="title: External Link; pos: bottom; delay: 700" href="https://financial-calculators.co.uk/" target="blank" rel="noopener noreferrer"><i  class="fa-solid fa-arrow-up-right-from-square fa-lg"></i></i></a>
+                                        <a class="icon-link" uk-tooltip="title: GitHub; pos: left; delay: 700" href="https://github.com/TomNikoloff/financial-calculators" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github fa-xl"></i></a>
+                                        <a class="icon-link" uk-tooltip="title: External Link; pos: bottom; delay: 700" href="https://financial-calculators.co.uk/" target="_blank" rel="noopener noreferrer"><i  class="fa-solid fa-arrow-up-right-from-square fa-lg"></i></i></a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         
             
+                    </div>
+                    <div class="uk-flex uk-flex-center uk-margin-large-top">
+                        <hr class="uk-width-3-4" style="border-color: var(--tn-lighter-main);">
+                    </div>
+                    <div class="uk-margin-top uk-text-center">
+                        <div data-aos="fade-right" class="uk-flex uk-flex-center">
+                            <div>
+                                <h2 class="other-project-header uk-text-bold uk-flex">
+                                    <span>O</span>
+                                    <span>t</span>
+                                    <span>h</span>
+                                    <span>e</span>
+                                    <span>r</span>
+                                </h2>
+                                <h2 class="other-project-header purple uk-text-bold uk-flex uk-margin-medium-left">
+                                    <span>N</span>
+                                    <span>o</span>
+                                    <span>t</span>
+                                    <span>e</span>
+                                    <span>w</span>
+                                    <span>o</span>
+                                    <span>r</span>
+                                    <span>t</span>
+                                    <span>h</span>
+                                    <span>y</span>
+                                </h2>
+                                <h2 class="other-project-header uk-text-bold uk-flex" style="margin-left: 125px;">
+                                    <span>P</span>
+                                    <span>r</span>
+                                    <span>o</span>
+                                    <span>j</span>
+                                    <span>e</span>
+                                    <span>c</span>
+                                    <span>t</span>
+                                    <span>s</span>
+                                </h2>
+                            </div>
+                        </div>
+                    </div>
+                    <div uk-grid class="project-grid uk-grid uk-child-width-1-3@m uk-margin-large-top uk-grid-match" >
+                        <div>
+                            <div class="uk-card uk-padding" data-aos="zoom-out-up" onclick="window.open('https://tomnikoloff.github.io/react-memory-game/', '_blank');">
+                                <div class="uk-position-relative">
+                                    <div class="uk-flex uk-flex-between">
+                                        <div>
+                                            <i class="fa-regular fa-folder fa-2xl"></i>
+                                        </div>
+                                        <div>
+                                            <div class="project-links">
+                                                <a class="icon-link" uk-tooltip="title: GitHub; pos: left; delay: 700" href="https://github.com/TomNikoloff/react-memory-game" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github fa-xl"></i></a>
+                                                <a class="icon-link" uk-tooltip="title: External Link; pos: right; delay: 700" href="https://tomnikoloff.github.io/react-memory-game/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square fa-lg"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="uk-margin">
+                                        <h3 class="other-projects-title">
+                                            <a href="https://tomnikoloff.github.io/react-memory-game/">Memory Game</a>
+                                        </h3>
+                                    </div>
+                                    <div>
+                                        <p class="other-projects-description">
+                                            A simple memory game built using React.
+                                            <br>
+                                        </p>
+                                    </div>
+
+                                </div>
+                                <footer>
+                                    <ul class="other-project-tech-stack">
+                                        <li>
+                                            React
+                                        </li>
+                                        <li>
+                                            UIKit
+                                        </li>
+                                    </ul>
+                                </footer>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="uk-card uk-padding" data-aos="zoom-out-up" onclick="window.open('https://tomnikoloff.github.io/react-to-do-list/', '_blank');">
+                                <div class="uk-position-relative">
+                                    <div class="uk-flex uk-flex-between">
+                                        <div>
+                                            <i class="fa-regular fa-folder fa-2xl"></i>
+                                        </div>
+                                        <div>
+                                            <div class="project-links">
+                                                <a class="icon-link" uk-tooltip="title: GitHub; pos: left; delay: 700" href="https://github.com/TomNikoloff/react-to-do-list" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github fa-xl"></i></a>
+                                                <a class="icon-link" uk-tooltip="title: External Link; pos: right; delay: 700" href="https://tomnikoloff.github.io/react-to-do-list/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square fa-lg"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="uk-margin">
+                                        <h3 class="other-projects-title">
+                                            <a href="https://tomnikoloff.github.io/react-to-do-list/">To-Do List</a>
+                                        </h3>
+                                    </div>
+                                    <div>
+                                        <p class="other-projects-description">
+                                            A simple to-do list built using React.
+                                            <br>
+                                        </p>
+                                    </div>
+                                </div>
+                                <footer>
+                                    <ul class="other-project-tech-stack">
+                                        <li>
+                                            React
+                                        </li>
+                                        <li>
+                                            Bootstrap
+                                        </li>
+                                    </ul>
+                                </footer>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="uk-card uk-padding" data-aos="zoom-out-up" onclick="window.open('https://tomnikoloff.github.io/react-rock-paper-scissors/', '_blank');">
+                                <div class="uk-position-relative">
+                                    <div class="uk-flex uk-flex-between">
+                                        <div>
+                                            <i class="fa-regular fa-folder fa-2xl"></i>
+                                        </div>
+                                        <div>
+                                            <div class="project-links">
+                                                <a class="icon-link" uk-tooltip="title: GitHub; pos: left; delay: 700" href="https://github.com/TomNikoloff/react-rock-paper-scissors" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github fa-xl"></i></a>
+                                                <a class="icon-link" uk-tooltip="title: External Link; pos: right; delay: 700" href="https://tomnikoloff.github.io/react-rock-paper-scissors/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square fa-lg"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="uk-margin">
+                                        <h3 class="other-projects-title">
+                                            <a href="https://tomnikoloff.github.io/react-rock-paper-scissors/">Rock, Paper & Scissors</a>
+                                        </h3>
+                                    </div>
+                                    <div>
+                                        <p class="other-projects-description">
+                                            A simple rock, paper and scissors game.
+                                        </p>
+                                    </div>
+                                </div>
+                                <footer>
+                                    <ul class="other-project-tech-stack">
+                                        <li>
+                                            React
+                                        </li>
+                                        <li>
+                                            UIKit
+                                        </li>
+                                    </ul>
+                                </footer>
+                            </div>
+                        </div>
                     </div>
                     <div class="uk-margin-large-top">
                         <h3 class="more-to-come">More To Come...</h3>
