Github link fix

--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
                     <div uk-grid class="project-grid uk-grid uk-child-width-1-3@m uk-margin-large-top uk-grid-match" >
                         <div>
                             <div class="uk-card uk-padding" data-aos="zoom-out-up" onclick="window.open('https://tomnikoloff.github.io/react-memory-game/', '_blank');">
-                                <div class="uk-position-relative">
+                                <div class="">
                                     <div class="uk-flex uk-flex-between">
                                         <div>
                                             <i class="fa-regular fa-folder fa-2xl"></i>
@@ -756,7 +756,7 @@
                         </div>
                         <div>
                             <div class="uk-card uk-padding" data-aos="zoom-out-up" onclick="window.open('https://tomnikoloff.github.io/react-to-do-list/', '_blank');">
-                                <div class="uk-position-relative">
+                                <div class="">
                                     <div class="uk-flex uk-flex-between">
                                         <div>
                                             <i class="fa-regular fa-folder fa-2xl"></i>
@@ -794,7 +794,7 @@
                         </div>
                         <div>
                             <div class="uk-card uk-padding" data-aos="zoom-out-up" onclick="window.open('https://tomnikoloff.github.io/react-rock-paper-scissors/', '_blank');">
-                                <div class="uk-position-relative">
+                                <div class="">
                                     <div class="uk-flex uk-flex-between">
                                         <div>
                                             <i class="fa-regular fa-folder fa-2xl"></i>
