Link fix using js

--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
                                         </div>
                                         <div>
                                             <div class="project-links">
-                                                <a class="icon-link" uk-tooltip="title: GitHub; pos: left; delay: 700" href="https://github.com/TomNikoloff/react-memory-game" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github fa-xl"></i></a>
+                                                <a onclick="window.open('https://github.com/TomNikoloff/react-memory-game', '_blank');" class="icon-link" uk-tooltip="title: GitHub; pos: left; delay: 700" href="https://github.com/TomNikoloff/react-memory-game" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github fa-xl"></i></a>
                                                 <a class="icon-link" uk-tooltip="title: External Link; pos: right; delay: 700" href="https://tomnikoloff.github.io/react-memory-game/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square fa-lg"></i></a>
                                             </div>
                                         </div>
@@ -763,7 +763,7 @@
                                         </div>
                                         <div>
                                             <div class="project-links">
-                                                <a class="icon-link" uk-tooltip="title: GitHub; pos: left; delay: 700" href="https://github.com/TomNikoloff/react-to-do-list" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github fa-xl"></i></a>
+                                                <a onclick="window.open('https://github.com/TomNikoloff/react-to-do-list', '_blank');" class="icon-link" uk-tooltip="title: GitHub; pos: left; delay: 700" href="https://github.com/TomNikoloff/react-to-do-list" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github fa-xl"></i></a>
                                                 <a class="icon-link" uk-tooltip="title: External Link; pos: right; delay: 700" href="https://tomnikoloff.github.io/react-to-do-list/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square fa-lg"></i></a>
                                             </div>
                                         </div>
@@ -801,7 +801,7 @@
                                         </div>
                                         <div>
                                             <div class="project-links">
-                                                <a class="icon-link" uk-tooltip="title: GitHub; pos: left; delay: 700" href="https://github.com/TomNikoloff/react-rock-paper-scissors" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github fa-xl"></i></a>
+                                                <a onclick="window.open('https://github.com/TomNikoloff/react-rock-paper-scissors', '_blank');" class="icon-link" uk-tooltip="title: GitHub; pos: left; delay: 700" href="https://github.com/TomNikoloff/react-rock-paper-scissors" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github fa-xl"></i></a>
                                                 <a class="icon-link" uk-tooltip="title: External Link; pos: right; delay: 700" href="https://tomnikoloff.github.io/react-rock-paper-scissors/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square fa-lg"></i></a>
                                             </div>
                                         </div>
