--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
                                         <li>Geolocation API</li>
                                     </ul>
                                     <div class="project-links">
-                                        <a class="icon-link" uk-tooltip="title: External Link; pos: right; delay: 700" href="https://github.com/TomNikoloff/react-weather-app" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square fa-lg"></i></a>
+                                        <a class="icon-link" uk-tooltip="title: External Link; pos: bottom; delay: 700" href="https://tom-nikoloff-react-weather.netlify.app/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square fa-lg"></i></a>
                                         <a class="icon-link" uk-tooltip="title: GitHub; pos: right; delay: 700" href="https://github.com/TomNikoloff/react-weather-app" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github fa-xl"></i></a>
                                     </div>
                                 </div>
@@ -671,7 +671,7 @@
                                         <li>UiKit</li>
                                     </ul>
                                     <div class="project-links">
-                                        <a class="icon-link" uk-tooltip="title: External Link; pos: left; delay: 700" href="https://www.norfolk-knights-wheelchair-rugby.co.uk/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square fa-lg"></i></a>
+                                        <a class="icon-link" uk-tooltip="title: External Link; pos: bottom; delay: 700" href="https://www.norfolk-knights-wheelchair-rugby.co.uk/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square fa-lg"></i></a>
                                     </div>
                                 </div>
                             </div>
