React weather border added.

--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
                                     <div class="project-image-container" data-aos="fade-left">
                                         <div class="overlay"></div>
                                         <div class="project-image">
-                                            <img src="./images/react-weather-app.png">
+                                            <img style="border: 2px solid rgba(13, 28, 54, 0.7);" src="./images/react-weather-app.png">
                                         </div>
                                     </div>
                                 </a>
