--- a/index.html
+++ b/index.html
@@ -291,10 +291,7 @@
                                         I have a diverse set of skills, ranging from HTML, CSS and JavaScript, all the way to PHP, SQLite and Firebase. Although my main area of expertise is in front-end development. I have a real passion for building pixel-perfect websites and apps that are intuitive, semantic and responsive.
                                     </p>
                                     <p>
-                                        In addition to this, I have recently focused on expanding my 
-                                        skill set by diving into React. I have dedicated time to self-study and 
-                                        completed several online courses to master Reacts core concepts.
-
+                                        In addition to this, I have recently focused on expanding my skill set by diving into React. I have dedicated time to self-study, which has been bolstered by the completion of several online courses and hands-on project experience utilizing the library.
                                     </p>
                                 </div>
                                 <div style="margin-top: -10px;">
