--- a/index.html
+++ b/index.html
@@ -893,7 +893,7 @@
         </div>   
 
         <div class="bounce-in-left slides contact-container">      
-            <section id="contact_section" class="contact-section full-height-section">
+            <section id="contact_section" class="contact-section full-height-section uk-position-relative">
                 <div class="html-tag-section-top section-tags uk-visible@s">
                     <div>
                         <span class="html-tags">
@@ -941,25 +941,26 @@
                         </span>
                     </div>
                 </div>
+                <div class="uk-position-absolute uk-width-1-1" style="bottom: 0; left: 0;">
+                    <div class="footer">
+                        <p class="uk-text-center">Handcrafted by me <br class="uk-hidden@s"><i class="fa-regular fa-copyright"></i> twentyTwentyThree</p>
+                    </div>
+                    <div class="html-tags-bottom">
+                        <div class="uk-margin-left">
+                            <span class="html-tags">
+                                &lt;/body&gt;  
+                            </span>
+                        </div>
+                        <div>
+                            <span class="html-tags">
+                                &lt;/html&gt;  
+                            </span>
+                        </div>
+                    </div>
+                </div>
             </section>
         
-            <div class="uk-position-relative">
-                <div class="footer">
-                    <p class="uk-text-center">Handcrafted by me <br class="uk-hidden@s"><i class="fa-regular fa-copyright"></i> twentyTwentyThree</p>
-                </div>
-                <div class="html-tags-bottom">
-                    <div class="uk-margin-left">
-                        <span class="html-tags">
-                            &lt;/body&gt;  
-                        </span>
-                    </div>
-                    <div>
-                        <span class="html-tags">
-                            &lt;/html&gt;  
-                        </span>
-                    </div>
-                </div>
-            </div>
+
         </div>   
 
     </div>
