--- a/index.html
+++ b/index.html
@@ -188,10 +188,17 @@
                                 </div>
                                 <div data-aos="fade-right">
                                     <p>
-                                        I've always had a passion for technology and computers. Originating from a love of PC gaming at a young age. After starting to learn web development during lockdown and using my free time to progress my skills. It had only served to solidify what role I wanted to fulfil. So at the beginning of 2022, I took the plunge and made it my goal to become a developer fulltime. By early May of that year, I landed my first job as a Web developer and haven't looked back since.
+                                        My fascination with technology and computers traces back to my early days, sparked by a deep-rooted love for 
+                                        PC gaming. During the lockdown, I ventured into learning web development, dedicating my free time to honing my 
+                                        skills. This pursuit cemented my ambition – I was determined to pursue a career in this field. In early 2022, 
+                                        I took the leap, setting my sights on becoming a full-time developer. By May of that year, I secured my inaugural 
+                                        role as a Web developer, marking a pivotal moment that has propelled me forward ever since.
                                     </p>
                                     <p>
-                                        I am a reliable, conscientious and hardworking individual, who is equally confident working as part of a team and on my own initiative. I feel that I would bring enthusiasm and commitment to any job that arises. I like tackling a problem head on and and working towards a solution.
+                                        I embody reliability, conscientiousness, and a strong work ethic, 
+                                        thriving both in collaborative team environments and when driving projects independently.
+                                        My approach involves infusing enthusiasm and unwavering commitment into every task at hand. 
+                                        I'm drawn to challenges, proactively tackling them head-on, fueled by the drive to unearth effective solutions.
                                     </p>
                                     <p class="uk-margin-remove">
                                         When I'm not at my computer, I'm am usually in the gym, hanging out with family or going for long walks with my golden retriever, Lola.
