About Me - Text Fix

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                                         My fascination with technology and computers traces back to my early days, sparked by a deep-rooted love for 
                                         PC gaming. During the lockdown, I ventured into learning web development, dedicating my free time to honing my 
                                         skills. This pursuit cemented my ambition – I was determined to pursue a career in this field. In early 2022, 
-                                        I took the leap, setting my sights on becoming a full-time developer. By May of that year, I secured my inaugural 
+                                        I took the leap, setting my sights on becoming a full-time developer. By May of that year, I secured my first 
                                         role as a Web developer, marking a pivotal moment that has propelled me forward ever since.
                                     </p>
                                     <p>
