--- a/cv/index.html
+++ b/cv/index.html
@@ -69,39 +69,169 @@
                 <hr>
                 <section>
                     <h2>Professional Experience</h2>
-                    <h3>Powered By Haiku</h3>
-                    <div class="uk-flex uk-flex-between uk-flex-bottom">
-                        <h4>Web Developer</h4>
-                        <h5>Sept 2023 - Present</h5>
+                    <div>
+                        <h3>Powered By Haiku</h3>
+                        <div class="uk-flex uk-flex-between uk-flex-bottom">
+                            <h4>Web Developer</h4>
+                            <h5>Sept 2023 - Present</h5>
+                        </div>
+                        <ul>
+                            <li>
+                                Developed high-quality, robust production code for diverse array of client projects.
+                            </li>
+                            <li>
+                                Led the development initiative of a fully customized CRM system, utilizing a modular-based 
+                                approach to enhance scalability, flexibility, and tailored functionality.
+                            </li>
+                            <li>
+                                Conducted rigorous quality assurance testing across multiple platforms, ensuring seamless
+                                 cross-browser compatibility and optimal mobile responsiveness.
+                            </li>
+                            <li>
+                                Responsible for technical and supporting documentation for new and improved features, as well as in-team demoing.
+                            </li>
+                        </ul>
+                        <ul class="tag-list">
+                            <li>
+                                <div>
+                                    JS ES6+
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    PHP
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    SCSS
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    UiKit
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    Bootstrap
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    Shopify
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    SQLite
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    Firebase
+                                </div>
+                            </li>
+                        </ul>
                     </div>
-                    <ul>
-                        <li>
-                            Developed high-quality, robust production code for diverse array of client projects.
-                        </li>
-                        <li>
-                            Led the development initiative of a fully customized CRM system, utilizing a modular-based 
-                            approach to enhance scalability, flexibility, and tailored functionality.
-                        </li>
-                        <li>
-                            Conducted rigorous quality assurance testing across multiple platforms, ensuring seamless
-                             cross-browser compatibility and optimal mobile responsiveness.
-                        </li>
-                        <li>
-                            Responsible for technical and supporting documentation for new and improved features, as well as in-team demoing.
-                        </li>
-                    </ul>
-                    <ul class="tag-list">
-                        <li>
-                            <div>
-                                JS ES6+
-                            </div>
-                        </li>
-                        <li>
-                            <div>
-                                PHP
-                            </div>
-                        </li>
-                    </ul>
+                    <div>
+                        <h3>Powered By Haiku</h3>
+                        <div class="uk-flex uk-flex-between uk-flex-bottom">
+                            <h4>Junior Web Developer</h4>
+                            <h5>May 2022 - Sept 2023</h5>
+                        </div>
+                        <ul>
+                            <li>
+                                Tasked with new feature development, resolving bugs and conducting prototyping to further
+                                 enhance my existing skills across both the front and back-end.
+                            </li>
+                            <li>
+                                Collaborated seamlessly with designers, project managers, and fellow developers to transform 
+                                client visions into tangible solutions.
+                            </li>
+                        </ul>
+                        <ul class="tag-list">
+                            <li>
+                                <div>
+                                    JS ES6+
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    PHP
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    UiKit
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    Bootstrap
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    Shopify
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    GoJs
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </section>
+                <hr>
+                <section>
+                    <h2>Freelance</h2>
+                    <div>
+                        <h3>The Little PolyTunnel</h3>
+                        <p>
+                            Developed a comprehensive website for a local plant nursery, designed to showcase their plant collection.
+                            The website offers in-depth information and keeps visitors informed about the current stock availability.
+                            Added a simple user dashboard, allowing the owners to update the company's stock levels.
+                        </p>
+                    </div>
+                    <div>
+                        <h3>Ciaran Gravestock Photography</h3>
+                        <p>
+                            Created a personalized portfolio website for an editor and photographer, translating their provided
+                            designs into a visually engaging online platform. The website serves to showcase their work,
+                            while also providing a seamless means for visitors to easily connect and inquire about their professional services.
+                        </p>
+                    </div>
+                </section>
+                <hr>
+                <section>
+                    <h2>Education</h2>
+                    <h3>East Norfolk Six Form College</h3>
+                    <div class="uk-flex uk-flex-between uk-flex-bottom">
+                        <h4>A Levels: Mathematics, Physics, Electronics</h4>
+                        <h5>Sept 2011 - July 2013</h5>
+                    </div>
+                </section>
+                <hr>
+                <section>
+                    <h2>Personal Projects</h2>
+                    <div>
+                        <h3>Financial Calculators</h3>
+                        <p>
+                            Couldn't find a website with dynamic financial calculators, so I made my own. 
+                            Sliders and inputs instantly update values, and I plan to expand with various calculators
+                            and essential financial information.
+                        </p>
+                    </div>
+                    <div>
+                        <h3>Weather App</h3>
+                        <p>
+                            Built a React weather app for easy access to current, 3-hourly, and 5-day forecasts worldwide.
+                            Simply input a location (city or current), toggle between Celsius and Fahrenheit, and get detailed
+                            weather info like temperature, humidity, wind speed, and conditions.
+                        </p>
+                    </div>
                 </section>
             </main>
         </div>
