--- a/cv/index.html
+++ b/cv/index.html
@@ -90,6 +90,12 @@
                             <li>
                                 Responsible for technical and supporting documentation for new and improved features, as well as in-team demoing.
                             </li>
+                            <li>
+                                Teach and support new developers during the onboarding process
+                            </li>
+                            <li>
+                                Managed and optimized databases for performance and scalability.
+                            </li>
                         </ul>
                         <ul class="tag-list">
                             <li>
@@ -149,6 +155,12 @@
                                 Collaborated seamlessly with designers, project managers, and fellow developers to transform 
                                 client visions into tangible solutions.
                             </li>
+                            <li>
+                                Developed responsive and user-friendly interfaces.
+                            </li>
+                            <li>
+                                Collaborated with senior developers to troubleshoot and resolve coding issues, gaining hands-on experience in debugging.
+                            </li>
                         </ul>
                         <ul class="tag-list">
                             <li>
@@ -194,6 +206,23 @@
                             The website offers in-depth information and keeps visitors informed about the current stock availability.
                             Added a simple user dashboard, allowing the owners to update the company's stock levels.
                         </p>
+                        <ul class="tag-list">
+                            <li>
+                                <div>
+                                    JS
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    PHP
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    UiKit
+                                </div>
+                            </li>
+                        </ul>
                     </div>
                     <div>
                         <h3>Ciaran Gravestock Photography</h3>
@@ -202,6 +231,18 @@
                             designs into a visually engaging online platform. The website serves to showcase their work,
                             while also providing a seamless means for visitors to easily connect and inquire about their professional services.
                         </p>
+                        <ul class="tag-list">
+                            <li>
+                                <div>
+                                    JS
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    Bootstrap
+                                </div>
+                            </li>
+                        </ul>
                     </div>
                 </section>
                 <hr>
@@ -223,6 +264,23 @@
                             Sliders and inputs instantly update values, and I plan to expand with various calculators
                             and essential financial information.
                         </p>
+                        <ul class="tag-list">
+                            <li>
+                                <div>
+                                    JS
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    PHP
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    UiKit
+                                </div>
+                            </li>
+                        </ul>
                     </div>
                     <div>
                         <h3>Weather App</h3>
@@ -231,6 +289,29 @@
                             Simply input a location (city or current), toggle between Celsius and Fahrenheit, and get detailed
                             weather info like temperature, humidity, wind speed, and conditions.
                         </p>
+                        <ul class="tag-list">
+                            <li>
+                                <div>
+                                    React
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    Netlify
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    UiKit
+                                </div>
+                            </li>
+
+                            <li>
+                                <div>
+                                    Styled Components
+                                </div>
+                            </li>
+                        </ul>
                     </div>
                 </section>
             </main>
