Uikit Print overrides

--- a/cv/index.html
+++ b/cv/index.html
@@ -14,28 +14,17 @@
     <script src="https://kit.fontawesome.com/2eaf1545d9.js" crossorigin="anonymous"></script>
 
     <!-- UIkit CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.16.23/dist/css/uikit.min.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/uikit@3.16.23/dist/css/uikit.min.css" />
 
     <!-- UIkit JS -->
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.23/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.23/dist/js/uikit-icons.min.js"></script>
 
-    <!-- CSS  
-    <link rel="stylesheet" href="../library/css/core.css">
-    <link rel="stylesheet" href="../library/css/responsive.css">
-    <link rel="stylesheet" href="../library/css/animations.css">
-    -->
-    <link rel="stylesheet" href="./core.css">
+    <link rel="stylesheet" type="text/css" href="./core.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
-    <!-- Google Fonts 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Manrope:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    --> 
 
     <!-- AOS Animations -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
