--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.23/dist/js/uikit-icons.min.js"></script>
 
     <!-- CSS  -->
-    <link rel="stylesheet" href="./library/css/core.css">
-    <link rel="stylesheet" href="./library/css/responsive.css">
-    <link rel="stylesheet" href="./library/css/animations.css">
+    <link rel="stylesheet" type="text/css" href="./library/css/core.css">
+    <link rel="stylesheet" type="text/css" href="./library/css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="./library/css/animations.css">
 
     <!-- CORE JS -->
-    <script src="./library/js/core.js"></script>
+    <script type="text/javascript" src="./library/js/core.js"></script>
 
     <!-- Google Fonts --> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
